--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Trail Stay – Find and book your perfect outdoor getaway. Search for stays near hiking, biking, fishing, and nature trails." />
+    <meta name="description" content="Trail Stay App - Find and book your next outdoor getaway." />
     <title>Trail Stay</title>
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <!-- Leaflet CSS for map -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <!-- Tailwind CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <!-- Leaflet CSS -->
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
@@ -14,8 +16,19 @@
       crossorigin=""
     />
   </head>
-  <body class="bg-gray-50 text-gray-900">
+  <body class="bg-gray-100 text-gray-800">
+    <!-- Hero Banner -->
+    <header class="bg-cover bg-center h-[300px] text-white flex items-center justify-center" style="background-image: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb');">
+      <div class="bg-black bg-opacity-50 p-6 rounded">
+        <h1 class="text-4xl font-bold">Find Your Next Trail Stay</h1>
+        <p class="text-lg mt-2">Search cabins, retreats & nature escapes near trails</p>
+      </div>
+    </header>
+
+    <!-- Root React Container -->
     <div id="root"></div>
+
+    <!-- React Entry -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
